# coursework4

./: .gitignore  CMakeLists.txt  Data.cpp  Data.h  Element.cpp  Element.h  Enums.h  HexahedronElements.cpp  HexahedronElements.h  InfQuadElements.cpp  MathMV.cpp  MathMV.h  Node.cpp  Node.h  Parser.cpp  Parser.h  QuadElements.cpp  QuadElements.h  README.md  Tests.cpp  Tests.h  TetrahedronElements.cpp  TetrahedronElements.h  TriangleElements.cpp  TriangleElements.h  acolor.py  forFC.vcxproj  forFC.vcxproj.filters  global.cpp  global.h  json.hpp  k.fc  log.h  main.cpp  test.fc
Calc/: Calc.cpp  Calc.h  Data.cpp  Data.h  Enums.h  MathMV.cpp  MathMV.h  Node.cpp  Node.h  main.cpp
Elements/: Element.cpp  Element.h  Hex.cpp  Hex.h  HexSEM.h  HexahedronElements.cpp  HexahedronElements.h  InfQuad.cpp  InfQuadElements.cpp  InfQuadElements.h  Quad.cpp  Quad.h  QuadElements.cpp  QuadElements.h  QuadSEM.h  Tetra.cpp  Tetra.h  TetrahedronElements.cpp  TetrahedronElements.h  Tri.cpp  Tri.h  TriangleElements.cpp  TriangleElements.h  Wedge.cpp  Wedge.h
Elements/Finite/: Hex.cpp  Hex.h  Pyr.cpp  Pyr.h  Quad.cpp  Quad.h  Tetra.cpp  Tetra.h  Tri.cpp  Tri.h  Wedge.cpp  Wedge.h
Elements/Infinite/: InfHex.cpp  InfHex.h  InfQuad.cpp  InfQuad.h
Elements/Spectral/: HexSEM.h  InfHexSEM.h  InfQuadSEM.h  QuadSEM.h
Node/: Node.cpp  Node.h
Output/: Output.cpp  Output.h  PVDWriter.cpp  PVDWriter.h  VTUWriter.cpp  VTUWriter.h
Parser/: Parser.cpp  Parser.h
Server/: Server.cpp  Server.h
Smoothing/: Interpolation.cpp  Interpolation.h  Smoothing.cpp  Smoothing.h  Strain.h  Stress.h
Solve/: Dynamics.cpp  Dynamics.h  Fabric.h  Smoothing.cpp  Smoothing.h  Solver.cpp  Solver.h  Statics.cpp  Statics.h
Tests/: Tests.cpp  Tests.h
Tests/Calc/: DataTests.cpp  DataTests.h  MathMVTests.cpp  MathMVTests.h
Tests/Elements/: HexTests.cpp  HexTests.h  PyrTests.cpp  PyrTests.h  QuadTests.cpp  QuadTests.h  TetraTests.cpp  TetraTests.h  TriTests.cpp  TriTests.h  WedgeTests.cpp  WedgeTests.h
Tests/Integration/: StaticQuadTests.cpp  StaticQuadTests.h
Tests/data/: kq18000.fc  kq18000_expected.vtu
front/: package-lock.json  package.json  server.js
front/public/: site.html
